CE-470-updating css to resolve the alignment issue with store and summary title.

--- a/templates/src/components/header-logo/headerLogo.css
+++ b/templates/src/components/header-logo/headerLogo.css
@@ -13,8 +13,15 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    padding-top: 5px;
 }
 
 .website-title-clickable__black .website-title-clickable__black:hover {
     color: #000;
+}
+
+@media only screen and (max-width: 768px) {
+    .website-title-logo-clickable {
+        padding-top: 0px;
+    }
 }
