--- a/templates/src/components/thank-you/thankYou.css
+++ b/templates/src/components/thank-you/thankYou.css
@@ -2,7 +2,7 @@
     text-align: left;
     width: 700px;
     height: auto;
-    padding: 4rem 100px 0 30px;
+    padding: 40px 100px 0 30px;
     display: flex;
     flex-direction: column;
     order: 2;
